fix: Change navbar login logout alignment and lighten background color

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background: #6eb884;
+    background: #d1e7d6;
 }
 
 body#landing-page h1 {
